test/arrays/iterations/iterModConstArr.good
iterModConstArr.chpl:4: error: illegal lvalue in assignment
