test/arrays/iterations/iterModConstArr.chpl
const A = [1.0, 2.0, 3.0];

for a in A do
  a = -a;

writeln(A);
